fix hover affecting spacing

--- a/src/components/Assessments.scss
+++ b/src/components/Assessments.scss
@@ -127,7 +127,7 @@
   }
 
   .droppable {
-    height: 12rem;
+    height: 13rem;
     padding: $spacing-slight
   }
 
